--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   table_calendar: ^3.0.9
   intl: ^0.18.1
   font_awesome_flutter: ^10.7.0
+  provider: ^6.0.0
+  http: ^1.4.0
+  shared_preferences: ^2.0.9
 
 
 
