--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fluttertoast: ^8.0.9
   qr_flutter: ^4.0.0
   image_picker: ^1.0.0
+  socket_io_client: ^2.0.3+1
+  flutter_local_notifications: ^9.9.1
 
 
 
@@ -47,6 +49,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  timezone: ^0.10.1
+  flutter_timezone: ^4.1.1
 
 dev_dependencies:
   flutter_test:
